--- a/solutions/windowsStore_vc120/brainCloud_wp/brainCloud_wp.vcxproj
+++ b/solutions/windowsStore_vc120/brainCloud_wp/brainCloud_wp.vcxproj
@@ -204,9 +204,10 @@
     <ClInclude Include="..\..\..\include\braincloud\internal\URLRequestHeader.h" />
     <ClInclude Include="..\..\..\include\braincloud\internal\URLRequestMethod.h" />
     <ClInclude Include="..\..\..\include\braincloud\internal\URLResponse.h" />
-    <ClInclude Include="..\..\..\include\braincloud\internal\win\BrainCloudComms2.h" />
+    <ClInclude Include="..\..\..\include\braincloud\internal\win\CppRestBrainCloudComms.h" />
     <ClInclude Include="..\..\..\include\braincloud\internal\win\CppRestFileUploader.h" />
     <ClInclude Include="..\..\..\include\braincloud\internal\win\MD5.h" />
+    <ClInclude Include="..\..\..\include\braincloud\internal\win\WindowsSaveDataHelper.h" />
     <ClInclude Include="..\..\..\include\braincloud\IRewardCallback.h" />
     <ClInclude Include="..\..\..\include\braincloud\IServerCallback.h" />
     <ClInclude Include="..\..\..\include\braincloud\OperationParam.h" />
@@ -272,9 +273,12 @@
     <ClCompile Include="..\..\..\src\URLRequestHeader.cpp" />
     <ClCompile Include="..\..\..\src\URLRequestMethod.cpp" />
     <ClCompile Include="..\..\..\src\URLResponse.cpp" />
-    <ClCompile Include="..\..\..\src\win\BrainCloudComms2.cpp" />
+    <ClCompile Include="..\..\..\src\win\CppRestBrainCloudComms.cpp" />
     <ClCompile Include="..\..\..\src\win\CppRestFileUploader.cpp" />
     <ClCompile Include="..\..\..\src\win\MD5.cpp" />
+    <ClCompile Include="..\..\..\src\win\WindowsDevice.cpp" />
+    <ClCompile Include="..\..\..\src\win\WindowsGUID.cpp" />
+    <ClCompile Include="..\..\..\src\win\WindowsSaveDataHelper.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
