--- a/solutions/windowsStore_vc120/brainCloud_wp/brainCloud_wp.vcxproj.filters
+++ b/solutions/windowsStore_vc120/brainCloud_wp/brainCloud_wp.vcxproj.filters
@@ -207,9 +207,6 @@
     <ClInclude Include="..\..\..\include\braincloud\internal\URLResponse.h">
       <Filter>include\braincloud\internal</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\braincloud\internal\win\BrainCloudComms2.h">
-      <Filter>include\braincloud\internal\win</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\include\braincloud\internal\win\CppRestFileUploader.h">
       <Filter>include\braincloud\internal\win</Filter>
     </ClInclude>
@@ -230,6 +227,12 @@
     </ClInclude>
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudTournament.h">
       <Filter>include\braincloud</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\braincloud\internal\win\CppRestBrainCloudComms.h">
+      <Filter>include\braincloud\internal\win</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\braincloud\internal\win\WindowsSaveDataHelper.h">
+      <Filter>include\braincloud\internal\win</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -380,9 +383,6 @@
     <ClCompile Include="..\..\..\src\URLResponse.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\win\BrainCloudComms2.cpp">
-      <Filter>src\win</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\src\win\CppRestFileUploader.cpp">
       <Filter>src\win</Filter>
     </ClCompile>
@@ -400,6 +400,18 @@
     </ClCompile>
     <ClCompile Include="..\..\..\src\BrainCloudTournament.cpp">
       <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\win\WindowsGUID.cpp">
+      <Filter>src\win</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\win\WindowsSaveDataHelper.cpp">
+      <Filter>src\win</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\win\CppRestBrainCloudComms.cpp">
+      <Filter>src\win</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\win\WindowsDevice.cpp">
+      <Filter>src\win</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
