Fixed http timeout for win32

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,8 +86,10 @@ elseif (USE_CURL)
 elseif (VS2013_OR_HIGHER)
 	list(APPEND OS_SPECIFIC_INCS "include/braincloud/internal/DefaultBrainCloudComms.h")
 	list(APPEND OS_SPECIFIC_SRCS "src/DefaultBrainCloudComms.cpp")
+	list(APPEND OS_SPECIFIC_INCS "include/braincloud/internal/win/XMLHTTPEventSink.h")
 	list(APPEND OS_SPECIFIC_INCS "include/braincloud/internal/win/XMLHTTPRequestFileUploader.h")
 	list(APPEND OS_SPECIFIC_INCS "include/braincloud/internal/win/XMLHTTPRequestLoader.h")
+	list(APPEND OS_SPECIFIC_SRCS "src/win/XMLHTTPEventSink.cpp")
 	list(APPEND OS_SPECIFIC_SRCS "src/win/XMLHTTPRequestFileUploader.cpp")
 	list(APPEND OS_SPECIFIC_SRCS "src/win/XMLHTTPRequestLoader.cpp")
 else()
