--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
-	"typescript.tsc.autoDetect": "off",
 	"files.exclude": {
-		"C:/Users/Jon/Desktop/BCSubsystem/.git": true,
-		"C:/Users/Jon/Desktop/BCSubsystem/.vscode": true,
-		"C:/Users/Jon/Desktop/BCSubsystem/Content": true,
-		"C:/Users/Jon/Desktop/BCSubsystem/Intermediate": true,
-		"C:/Users/Jon/Desktop/BCSubsystem/Saved": true,
-		"C:/Users/Jon/Desktop/BCSubsystem/screenshots": true
+		"C:/Users/Jon/Documents/GitHub/braincloud-unreal 4.19 - 2 4.20/.git": true,
+		"C:/Users/Jon/Documents/GitHub/braincloud-unreal 4.19 - 2 4.20/.vs": true,
+		"C:/Users/Jon/Documents/GitHub/braincloud-unreal 4.19 - 2 4.20/.vscode": true,
+		"C:/Users/Jon/Documents/GitHub/braincloud-unreal 4.19 - 2 4.20/Content": true,
+		"C:/Users/Jon/Documents/GitHub/braincloud-unreal 4.19 - 2 4.20/Intermediate": true,
+		"C:/Users/Jon/Documents/GitHub/braincloud-unreal 4.19 - 2 4.20/Saved": true,
+		"C:/Users/Jon/Documents/GitHub/braincloud-unreal 4.19 - 2 4.20/screenshots": true
 	}
 }
