RTTRegistration test passed!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,6 +161,7 @@ add_library(brainCloud STATIC
 	include/braincloud/BrainCloudProfanity.h
 	include/braincloud/BrainCloudPushNotification.h
 	include/braincloud/BrainCloudRedemptionCode.h
+	include/braincloud/BrainCloudRTTRegistration.h
 	include/braincloud/BrainCloudS3Handling.h
 	include/braincloud/BrainCloudScript.h
 	include/braincloud/BrainCloudSocialLeaderboard.h
@@ -191,6 +192,7 @@ add_library(brainCloud STATIC
 	include/braincloud/internal/IBrainCloudComms.h
 	include/braincloud/internal/IFileUploader.h
 	include/braincloud/internal/JsonUtil.h
+	include/braincloud/internal/RTTComms.h
 	include/braincloud/internal/SaveDataHelper.h
 	include/braincloud/internal/StringUtil.h
 	include/braincloud/internal/TimeUtil.h
@@ -208,6 +210,7 @@ add_library(brainCloud STATIC
 	src/AuthenticationType.cpp
 	src/BrainCloudAsyncMatch.cpp
 	src/BrainCloudAuthentication.cpp
+	src/BrainCloudChat.cpp
 	src/BrainCloudClient.cpp
 	src/BrainCloudDataStream.cpp
 	src/BrainCloudEntity.cpp
@@ -231,6 +234,7 @@ add_library(brainCloud STATIC
 	src/BrainCloudProfanity.cpp
 	src/BrainCloudPushNotification.cpp
 	src/BrainCloudRedemptionCode.cpp
+	src/BrainCloudRTTRegistration.cpp
 	src/BrainCloudS3Handling.cpp
 	src/BrainCloudScript.cpp
 	src/BrainCloudSocialLeaderboard.cpp
@@ -244,6 +248,7 @@ add_library(brainCloud STATIC
 	src/JsonUtil.cpp
 	src/OperationParam.cpp
 	src/Platform.cpp
+	src/RTTComms.cpp
 	src/SaveDataHelper.cpp
 	src/ServerCall.cpp
 	src/ServiceName.cpp
