ensure default wrapper is not Garbage collected
ensure default wrapper is not Garbage collected

--- a/BCSubsystem.uproject
+++ b/BCSubsystem.uproject
@@ -7,12 +7,7 @@
 		{
 			"Name": "BCSubsystem",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"AdditionalDependencies": [
-				"Engine",
-				"CoreUObject",
-				"BCClientPlugin"
-			]
+			"LoadingPhase": "Default"
 		}
 	],
 	"Plugins": [
