Added missing Security library for APPLE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -285,7 +285,8 @@ if (APPLE)
 	find_library(BC_COREFOUNDATION_LIB CoreFoundation)
 	find_library(BC_FOUNDATION_LIB Foundation)
 	find_library(BC_SYSCONFIG_LIB SystemConfiguration)
-	target_link_libraries(brainCloud ${BC_GAMEKIT_LIB} ${BC_COREFOUNDATION_LIB} ${BC_FOUNDATION_LIB} ${BC_SYSCONFIG_LIB})
+	find_library(BC_SECURITY_LIB Security)
+	target_link_libraries(brainCloud ${BC_GAMEKIT_LIB} ${BC_COREFOUNDATION_LIB} ${BC_FOUNDATION_LIB} ${BC_SYSCONFIG_LIB} ${BC_SECURITY_LIB})
 elseif (LINUX)
 	find_package(CURL REQUIRED)
 	list(APPEND includes PUBLIC ${CURL_INCLUDE_DIRS})
